--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,12 @@
     </style>
 
     <style name="Theme.BiniyamsBackendCalculator" parent="Base.Theme.BiniyamsBackendCalculator" />
+
+    <style name="CalculatorButtonStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/backspace</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
